--- a/static/css/sorting.css
+++ b/static/css/sorting.css
@@ -1,8 +1,40 @@
-@import "main.css";
+:root[color-mode="light"] {
+    --surface1: #e6e6e6;
+    --surface2: #f2f2f2;
+    --surface3: #ffffff;
+    --element1: #111111;
+    --element2: #222222;
+    --element3: #333333;
+    --primary: #f44336;
+    --secondary: #448aff;
+    --tertiary: #00a337;
+}
+
+:root[color-mode="dark"] {
+    --surface1: #262626;
+    --surface2: #333333;
+    --surface3: #404040;
+    --element1: #eeeeee;
+    --element2: #dddddd;
+    --element3: #cccccc;
+    --primary: #8b201d;
+    --secondary: #104c90;
+    --tertiary: #007a29;
+}
 
 /* == Global Styles === */
+body {
+    background: var(--surface1);
+    margin: 0;
+}
 
 * {
+    font-weight: 200;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Helvetica,
+        sans-serif;
+    text-decoration: none;
+    color: var(--element1);
     margin: 0;
     padding: 0;
 }
