--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Merren | Sorting </title>
+    <title> Sorting Algorithm Visualiser</title>
     <link type="text/css" rel="stylesheet" href="/css/sorting.css" />
+    <link type="image/png" rel="shortcut icon" href="/img/favicon.png"/>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="/js/sortingPage.js"></script>
     <script type="text/javascript" src="/js/sortingFunction.js"></script>
@@ -15,14 +16,13 @@
     <div class="header">
         <h1 id="title"">Sorting Algorithm Visualiser</h1>
         <div class="header__buttons">
-            <input type="number" id="arr-size" value="200" />
+            <input type="number" id="arr-size" />
             <button id="refresh">Generate New Array</button>
             <button id="quick">Quick Sort</button>
             <button id="merge">Merge Sort</button>
             <button id="bubble">Bubble Sort</button>
             <button id="selection">Selection Sort</button>
             <button id="insertion">Insertion Sort</button>
-            <button id="heap">Heap Sort</button>
         </div>
     </div>
     <div class="canvas"></div>
