--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,17 +14,23 @@
 
 <body>
     <div class="header">
-        <h1 id="title"">Sorting Algorithm Visualiser</h1>
-        <div class="header__buttons">
-            <input type="number" id="arr-size" />
+        <a href="."><h1 id="title"">Sorting Algorithm Visualiser</h1></a>
+    </div>
+    <div class="options-canvas-div">
+        <div class="options">
+            <h3>Functions</h3>
+            <hr>
             <button id="refresh">Generate New Array</button>
             <button id="quick">Quick Sort</button>
-            <button id="merge">Merge Sort</button>
             <button id="bubble">Bubble Sort</button>
             <button id="selection">Selection Sort</button>
             <button id="insertion">Insertion Sort</button>
+            <button id="merge">Merge Sort</button>
+            <h3>Settings</h3>
+            <hr>
+            <input type="number" id="arr-size" placeholder="Array Size:"></input>
+            <input type="number" id="delay" placeholder="Delay Amount:"></input>
         </div>
-    </div>
     <div class="canvas"></div>
 </body>
 
