--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,15 +21,15 @@
             <h3>Functions</h3>
             <hr>
             <button id="refresh">Generate New Array</button>
-            <button id="quick">Quick Sort</button>
             <button id="bubble">Bubble Sort</button>
             <button id="selection">Selection Sort</button>
             <button id="insertion">Insertion Sort</button>
+            <button id="quick">Quick Sort</button>
             <button id="merge">Merge Sort</button>
             <h3>Settings</h3>
             <hr>
-            <input type="number" id="arr-size" placeholder="Array Size:"></input>
-            <input type="number" id="delay" placeholder="Delay Amount:"></input>
+            <input type="number" id="arr-size"></input>
+            <input type="number" id="delay"></input>
         </div>
     <div class="canvas"></div>
 </body>
