--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             <button id="selection">Selection Sort</button>
             <button id="insertion">Insertion Sort</button>
             <button id="quick">Quick Sort</button>
-            <button id="merge">Merge Sort</button>
+            <button id="cocktail">Cocktail Sort</button>
             <h3>Settings</h3>
             <hr>
             <input type="number" id="arr-size"></input>
