--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,19 +17,21 @@
         <a href="."><h1 id="title"">Sorting Algorithm Visualiser</h1></a>
     </div>
     <div class="options-canvas-div">
-        <div class="options">
-            <h3>Functions</h3>
-            <hr>
-            <button id="refresh">Generate New Array</button>
-            <button id="bubble">Bubble Sort</button>
-            <button id="selection">Selection Sort</button>
-            <button id="insertion">Insertion Sort</button>
-            <button id="quick">Quick Sort</button>
-            <button id="cocktail">Cocktail Sort</button>
-            <h3>Settings</h3>
-            <hr>
-            <input type="number" id="arr-size"></input>
-            <input type="number" id="delay"></input>
+        <div class="sidebar">
+            <div class="options">
+                <h3>Functions</h3>
+                <button id="refresh">Generate New Array</button>
+                <button id="bubble">Bubble Sort</button>
+                <button id="selection">Selection Sort</button>
+                <button id="insertion">Insertion Sort</button>
+                <button id="quick">Quick Sort</button>
+                <button id="cocktail">Shaker Sort</button>
+            </div>
+            <div class="settings">
+                <h3>Settings</h3>
+                <input type="number" id="arr-size"></input>
+                <input type="number" id="delay"></input>
+            </div>
         </div>
     <div class="canvas"></div>
 </body>
